# pastebin

./: .gitignore  LICENSE  cabal.project  call-cabal2nix.sh  default.nix  flake.nix  format.sh  pastebin.cabal  pastebin.nix  shell.nix  update.sh
.github/workflows/: update.yml
app/: Main.hs
overlays/: amazonka-core.nix  amazonka-s3.nix  amazonka-sso.nix  amazonka-sts.nix  amazonka-test.nix  amazonka.nix  default.nix  haskellPackages.nix
src/Web/: Pastebin.hs
src/Web/Pastebin/: Option.hs
