cabal-version:      3.0
name:               pastebin
version:            0.0.0.1
synopsis:           A simple pastebin server
bug-reports:        https://github.com/linyinfeng/pastebin/issues
license:            MIT
license-file:       LICENSE
author:             Lin Yinfeng
maintainer:         lin.yinfeng@outlook.com
copyright:          (c) Lin Yinfeng
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/linyinfeng/pastebin

common haskell
  default-language: Haskell2010
  ghc-options:      -Wall

common dependencies
  build-depends:
    , amazonka
    , amazonka-core
    , amazonka-s3
    , base
    , binary
    , bytestring
    , conduit
    , containers
    , either
    , exceptions
    , http-types
    , lens
    , magic
    , MonadRandom
    , mtl
    , neat-interpolation
    , resourcet
    , text
    , wai
    , wai-extra
    , warp

common executable-flags
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
  import:
    haskell
    , dependencies

  exposed-modules:
    Web.Pastebin
    Web.Pastebin.Option

  other-modules:   Paths_pastebin
  hs-source-dirs:  src

executable pastebin
  import:
    haskell
    , dependencies
    , executable-flags

  main-is:        Main.hs
  other-modules:  Paths_pastebin
  build-depends:
    , optparse-applicative
    , pastebin

  hs-source-dirs: app
